syntax = "proto3";

package pb;

option go_package = ".;___pb";

import "proto/memory.proto";
import "proto/screen.proto";
import "proto/storage.proto";
import "proto/keyboard.proto";
import "proto/processor.proto";
import "google/protobuf/timestamp.proto";

message Laptop{
    string _id = 1;
    string brand = 2;
    string name = 3;
    CPU cpu = 4;
    Memory ram = 5;
    repeated GPU gpus = 6;
    repeated Storage storage = 15;
    Screen screen = 7;
    Keyboard keyboard = 8;
    double weight = 9;
    double price_usd = 12;
    uint32 release_year = 13;
    google.protobuf.Timestamp updated_at = 14;
}