syntax = "proto3";

package laptop;

option go_package = ".;___laptop";

import "memory.proto";

message CPU{
    string brand = 1;
    string name = 2 ;
    uint32 no_of_cores = 3;
    uint32 no_of_threads = 4;
    double min_ghz = 5;
    double max_ghz = 6;
}

message GPU{
    string brand = 1;
    string name = 2 ;
    double min_ghz = 3;
    double max_ghz = 4;
    Memory memory = 5;
}